chore: add poc wso2 user list endpoint
